@startuml
skinparam classAttributeIconSize 0
hide empty members

class Image {
    - imgPath : String
    + constructor()
    + getter()
    + setter()
}
interface ImageRepository {
    - image : Set<Image>
    + save(image : Image)
    + delete(image : Image)
}
class ImageService {
    - imageRepository : ImageRepository
    + uploadImage(imageFile : MultipartFile)
    + deleteImageByImgPath(imgPath : String)
    - getImageType(String : imageName)
    - validateImage(imageFile : MultipartFile)
}
class ImageController {
    - imageService : ImageService
    + POST /api/images() <<secured>>
    + DELETE /api/images() <<secured>>
}

Image "0..1" --* "1" User
Image "0..1" --* "1" Recommendation
ImageRepository --> Image
ImageService --> ImageRepository
ImageController --> ImageService

@enduml